Add web exercises for cells 00-03
Add multiple HTML/CSS/JS exercises across cells 00–03. Introduces a build.sh utility to create ex<N> folders; updates cell01 piscineweb examples; and adds new exercises: responsive tables (separated CSS), dropdown menu, parallax sections, profile card, background color changer (vanilla + jQuery), balloon interaction (vanilla + jQuery), calculator (vanilla + jQuery) with validation, and a To-Do app (vanilla + jQuery) persisting to cookies. Files include HTML, CSS and JS versions (including jQuery variants) for learning/demo purposes. (cell00/ex05, cell01/ex01-ex06, cell02/ex0-03, cell03/ex00-04)

--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>piscineweb</title>
+    <title>EX03 piscineweb</title>
 
 </head>
 <body>
     <h1 style="text-align: center;">Piscine Web</h1>
     <div style="text-align: center;">
-    <img src="https://cdn.pixabay.com/photo/2026/01/18/10/16/parakeet-10074499_1280.jpg" alt="" width="500" height="333">
+    
+    <a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+        <img src="https://cdn.pixabay.com/photo/2026/01/18/10/16/parakeet-10074499_1280.jpg" alt="" width="500" height="333">
+    </a>
     <img src="https://cdn.pixabay.com/photo/2023/10/20/17/52/banff-8329971_1280.jpg" alt="" width="500" height="333">
     
     </div>
@@ -17,4 +20,4 @@
 </body>
 </html>
 
-<!-- โจทย์คือ ให้สร้างหน้า HTML ที่มีรูปภาพสองรูปจัดกึ่งกลางหน้าจอ header ชื่อ Piscine Web -->
+<!-- โจทย์คือ เพิ่มลิงก์ YouTube ให้กับรูปภาพแรกของไฟล์ex02-->
