--- a/rush/portfolio2.html
+++ b/rush/portfolio2.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-center mb-4 mb-lg-0">
-                    <img src="../rush/88151344_816949045440610_4476100961818902528_n.jpg" alt="Bawon Photo" class="img-fluid rounded-circle shadow-lg profile-img">
+                    <img src="88151344_816949045440610_4476100961818902528_n.jpg" alt="Bawon Photo" class="img-fluid rounded-circle shadow-lg profile-img">
                 </div>
                 <div class="col-lg-8">
                     <h2 class="section-title mb-4">About Me</h2>
